...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilFirstName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLastName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDob"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
